--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description = BBOB Benchmark function implemented in JAX
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = benchmark, optimization, jax
-url = https://github.com/mpvanderschelling/bbob_jax
+url = https://github.com/bessagroup/bbob-jax
 license = BSD-3-Clause License
 license_files = file: LICENSE
 classifiers =
@@ -24,7 +24,7 @@ package_dir=
   =src
 packages=find:
 include_package_data = True
-python_requires = >=3.11
+python_requires = >=3.10
 install_requires = file: requirements.txt
 
 
