--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,19 +6,33 @@ on:
       - main
 
 jobs:
-  build:
+  pypi-publish:
+    name: upload release to PyPI
     runs-on: ubuntu-latest
+    # Specifying a GitHub environment is optional, but strongly encouraged
+    environment: pypi
+    permissions:
+      # IMPORTANT: this permission is mandatory for Trusted Publishing
+      id-token: write
     steps:
-      - name: Release
-        uses: patrick-kidger/action_update_python_project@v8
-        with:
-          python-version: "3.11"
-          test-script: |
-            cp -r ${{ github.workspace }}/tests ./tests
-            cp ${{ github.workspace }}/pyproject.toml ./pyproject.toml
-            uv sync --extra tests --no-install-project --inexact
-            uv run --no-sync pytest
-          pypi-token: ${{ secrets.pypi_token }}
-          github-user: bessagroup
-          github-token: ${{ github.token }}
-          allow-first-release: true
+      # retrieve your distributions here
+
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Release
+#         uses: patrick-kidger/action_update_python_project@v8
+#         with:
+#           python-version: "3.11"
+#           test-script: |
+#             cp -r ${{ github.workspace }}/tests ./tests
+#             cp ${{ github.workspace }}/pyproject.toml ./pyproject.toml
+#             uv sync --extra tests --no-install-project --inexact
+#             uv run --no-sync pytest
+#           pypi-token: ${{ secrets.pypi_token }}
+#           github-user: bessagroup
+#           github-token: ${{ github.token }}
+#           allow-first-release: true
