--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,18 @@ jobs:
       id-token: write
     steps:
       # retrieve your distributions here
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Build with uv
+        run: |
+          python -m pip install --upgrade pip
+          pip install uv build
+          uv sync --extra tests --no-install-project --inexact
+          uv build
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
