--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,45 +6,19 @@ on:
       - main
 
 jobs:
-  pypi-publish:
-    name: upload release to PyPI
+  build:
     runs-on: ubuntu-latest
-    # Specifying a GitHub environment is optional, but strongly encouraged
     environment: pypi
-    permissions:
-      # IMPORTANT: this permission is mandatory for Trusted Publishing
-      id-token: write
     steps:
-      # retrieve your distributions here
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Release
+        uses: patrick-kidger/action_update_python_project@v8
         with:
           python-version: "3.11"
-      - name: Build with uv
-        run: |
-          python -m pip install --upgrade pip
-          pip install uv build
-          uv sync --extra tests --no-install-project --inexact
-          uv build
-
-      - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Release
-#         uses: patrick-kidger/action_update_python_project@v8
-#         with:
-#           python-version: "3.11"
-#           test-script: |
-#             cp -r ${{ github.workspace }}/tests ./tests
-#             cp ${{ github.workspace }}/pyproject.toml ./pyproject.toml
-#             uv sync --extra tests --no-install-project --inexact
-#             uv run --no-sync pytest
-#           pypi-token: ${{ secrets.pypi_token }}
-#           github-user: bessagroup
-#           github-token: ${{ github.token }}
-#           allow-first-release: true
+          test-script: |
+            cp -r ${{ github.workspace }}/tests ./tests
+            cp ${{ github.workspace }}/pyproject.toml ./pyproject.toml
+            uv sync --extra tests --no-install-project --inexact
+            uv run --no-sync pytest
+          pypi-token: ${{ secrets.pypi_token }}
+          github-user: bessagroup
+          github-token: ${{ github.token }}
