--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,3 +69,13 @@ dev = [
 tests = [
   "pytest"
 ]
+
+docs = [
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-include-exclude-files>=0.1.0",
+    "mkdocs-ipynb>=0.1.1",
+    "mkdocs-material>=9.6.20",
+    "mkdocstrings>=0.30.1",
+    "mkdocstrings-python>=1.18.2",
+    "pymdown-extensions>=10.16.1",
+]
