--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,3 +85,7 @@ docs = [
     "mkdocstrings-python>=1.18.2",
     "pymdown-extensions>=10.16.1",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
