--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,9 @@ exclude = [
 package = true
 
 [dependency-groups]
+dev = [
+    "coco-experiment>=2.8.1",
+]
 
 [project.optional-dependencies]
 tests = [
