--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,8 @@ extra_css:
     - _static/custom_css.css
 
 markdown_extensions:
+    - attr_list
+    - md_in_html
     - pymdownx.arithmatex:  # Render LaTeX via MathJax
         generic: true
     - pymdownx.superfences  # Seems to enable syntax highlighting when used with the Material theme.
@@ -97,6 +99,7 @@ plugins:
 
 nav:
     - 'index.md'
+    - Installation: 'installation.md'
     - API Reference:
         - 'api.md'
     - License:
