--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
 ]
 dependencies = [
   "jax",
-  "jaxtyping>=0.3.3",
+  "jaxtyping>=0.3.3"
 ]
 description = "BBOB Benchmark function implemented in JAX"
 keywords = ["jax", "bbob", "benchmarking", "black-box", "optimization"]
@@ -28,10 +28,6 @@ urls = {repository = "https://github.com/bessagroup/bbob-jax"}
 version = "1.0.0"
 
 [project.optional-dependencies]
-plot = [
-    "matplotlib>=3.10.7",
-]
-
 dev = [
   "pre-commit>=4.4.0"
 ]
@@ -43,6 +39,9 @@ docs = [
   "mkdocstrings>=0.30.1",
   "mkdocstrings-python>=1.18.2",
   "pymdown-extensions>=10.16.1"
+]
+plot = [
+  "matplotlib>=3.10.7"
 ]
 tests = [
   "pytest"
