--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,10 @@ repos:
       - id: ruff-check # linter
         types_or: [python, pyi, jupyter, toml]
         args: [--fix]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.14.0
+    hooks:
+      - id: mypy
+        additional_dependencies: [jax, jaxtyping]
+        types_or: [python]
+        exclude: ^tests/
