--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ version = "1.1.1"
 
 [project.optional-dependencies]
 dev = [
-  "pre-commit>=4.4.0"
+  "pre-commit>=4.4.0",
+  "mypy>=1.14.0"
 ]
 docs = [
   "mkdocs-gen-files>=0.5.0",
@@ -46,6 +47,14 @@ plot = [
 tests = [
   "pytest"
 ]
+
+[tool.mypy]
+disallow_untyped_defs = true
+exclude = ["tests"]
+ignore_missing_imports = true
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
