feat: Return global minimum `f_opt` with BBOB functions from the registry, updating documentation, tests, and plotting.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,7 @@ plugins:
 nav:
     - 'index.md'
     - Installation: 'installation.md'
-    - Getting Started: 'usage.md'
+    - Getting Started: 'usage.ipynb'
     - API Reference: 
         - 'api.md'
     - License: 
